[package]
name = "actix-web-playground"
version = "0.1.0"
authors = ["Ryan Rampersad <ryan.rampersad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.62"
log = "0.4.0"
env_logger = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "0.2", features = ["full"] }
